projects/compiler/test/typechecker/enumdecl/error_trait_impl_invalid_type.out
Error at %TEST_DIR%/typechecker/enumdecl/error_trait_impl_invalid_type.abra:5:13
Invalid item in trait implementations list
  |  enum Bar1 : Foo1 {}
                 ^
Expected the name of a trait, but instead found 'Foo1' (which is a type)

Error at %TEST_DIR%/typechecker/enumdecl/error_trait_impl_invalid_type.abra:6:13
Invalid item in trait implementations list
  |  enum Bar2 : Foo2 {}
                 ^
Expected the name of a trait, but instead found 'Foo2' (which is an enum)

Error at %TEST_DIR%/typechecker/enumdecl/error_trait_impl_invalid_type.abra:7:13
Invalid item in trait implementations list
  |  enum Bar3 : Foo3 {}
                 ^
Expected the name of a trait, but instead found 'Foo3' (which is a decorator)

Error at %TEST_DIR%/typechecker/enumdecl/error_trait_impl_invalid_type.abra:9:15
Invalid item in trait implementations list
  |  enum BarAll : Foo1, Foo2, Foo3 {}
                   ^
Expected the name of a trait, but instead found 'Foo1' (which is a type)

Error at %TEST_DIR%/typechecker/enumdecl/error_trait_impl_invalid_type.abra:9:21
Invalid item in trait implementations list
  |  enum BarAll : Foo1, Foo2, Foo3 {}
                         ^
Expected the name of a trait, but instead found 'Foo2' (which is an enum)

Error at %TEST_DIR%/typechecker/enumdecl/error_trait_impl_invalid_type.abra:9:27
Invalid item in trait implementations list
  |  enum BarAll : Foo1, Foo2, Foo3 {}
                               ^
Expected the name of a trait, but instead found 'Foo3' (which is a decorator)
